# teaching-assistant-chat-bot

./: .chat_app_messages.sqlite  .gitignore  README.md  chat_app.html  chat_app.py  chat_app.ts  chat_app_with_websockets(prototype).py  main.py  note.txt  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  agents.py  chat_app.py  chat_app.ts  note.txt  requirements.txt  requirements_old.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  PromptForm.js
public/videos/2160p60/partial_movie_files/GenScene/: partial_movie_file_list.txt
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat  srt  srt-deduplicate  srt-fixed-timeshift  srt-linear-timeshift  srt-lines-matching  srt-mux  srt-normalise  srt-play  srt-process
