[project]
name = "fastapi-chat-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "fastapi>=0.115.8",
    "logfire[fastapi]>=3.6.1",
    "pydantic-ai>=0.0.24",
    "pydantic-settings>=2.8.0",
    "scoop>=0.7.2.0",
    "unicorn>=2.1.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
